SERVER-38404 lockComplete can incorrectly skip checking if the operation context was killed, if the lock is granted quickly